# vacancies_parser

./: README.md  main.py  pyproject.toml  requirements.txt
src/: app_vacancies_parser.py  vacancy.py
src/api/: base_api.py  hh_api.py  superjob_api.py
src/file_handler/: base_file_handler.py
tests/: test_vacancy.py
